--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,9 +10,9 @@ androidx-core-ktx = "1.12.0"
 androidx-espresso-core = "3.5.1"
 androidx-material = "1.11.0"
 androidx-test-junit = "1.1.5"
-compose = "1.6.0"
+compose = "1.6.1"
 compose-compiler = "1.6.0"
-compose-plugin = "1.6.0-beta01"
+compose-plugin = "1.6.0-rc02"
 junit = "4.13.2"
 kotlin = "1.9.22"
 ktor = "2.3.7"
